<resources>
    <string name="app_name">Form</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="license">These is our license. You can share this app anywhere that you want and use it however you want. Just remember to enjoy</string>
    <string name="agreement">I Agree</string>
    <string name="gender">Gender</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="placeholder">placeholder</string>
    <string name="ciao">Ciao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>