<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_centerHorizontal="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_select_image"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_an_image"
        android:textSize="12sp"
        android:backgroundTint="@color/customBtnImage"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTxtName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:hint="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTxtEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/editTxtName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTxtName"
        app:layout_constraintTop_toBottomOf="@+id/editTxtName"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTxtPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTxtPassword2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTxtPassword"
        app:layout_constraintStart_toStartOf="@+id/editTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtLicense"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/license"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxtName"
        android:textSize="14sp"/>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/agreement"
        app:layout_constraintEnd_toEndOf="@+id/txtLicense"
        app:layout_constraintStart_toStartOf="@+id/txtLicense"
        app:layout_constraintTop_toBottomOf="@+id/txtLicense"
        android:id="@+id/cbAgree"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword2"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGender">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:checked="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:scaleX="0.5"
                android:scaleY="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtnOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:scaleX="0.5"
                android:scaleY="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="18sp" />


        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/country"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtCountry"
        app:layout_constraintStart_toEndOf="@+id/txtCountry"
        app:layout_constraintTop_toTopOf="@+id/txtCountry"
        android:layout_marginStart="30dp"
        android:id="@+id/spinnerCountries" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="34dp"
        android:text="@string/register"
        android:backgroundTint="@color/customBtnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCountry" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>